Feb 22, 2006

  * Fixed ordering issue on wide-character atoms.

Feb 9, 2006

  * Finished first version of indexed prefix and `like' search.

Feb 5, 2006

  * Allow 64-bit integers as arguments of literal(Int).

Feb 1, 2006

  * INTERNAL: completed first step of new literal handling code.  System
    passes internal tests under valgrind memory tests.  Fixed two
    memory leaks that pre-dated this change: using terms as literals
    and reclaiming the temporary datastructures using in rdf_save_db/2.

Jan 31, 2006

  * INTERNAL: 1-st step making literals first class citizens.
  * NOTE: The changes are numerous.  Be aware of possible stability
    problems.

Jan 17, 2006

  * ADDED: exported rdf_quote_uri/2 implementing unicode quoting rules for
    URIs.

Jan 11, 2006

  * FIXED: Avoid exception in rdf_unload/1

Dec 18, 2005

  * FIXED: Added simpleminded handling for updating the database from
    within a monitor.

Dec 5, 2005

  * ADDED: Each instance of rdfs:Datatype is a subclass of rdfs:Literal
    to the rules of rdf_subclass_of/2.

Nov 24, 2005

  * FIXED: Choicepoint in rdf_global_term/2, returning incorrect result
    on backtracking.

Nov 9, 2005

  * FIXED: generate correct XML for datatypes in defined namespaces.
    Ilmars Poikans.

Oct 11, 2005

  * FIXED: rdf_split_url/3 to detect local part more in line with current
    URI specs.

Sep 23, 2005

  * ENHANCED: issue monitor events with holding write lock.

Sep 22, 2005

  * FIXED: mask-handling in rdf_monitor, causing incorrect callbacks.

  * FIXED: bug in cache handling by rdf_load/2, introduced in 2.3.0.

=============
Version 2.3.0
=============

Sep 16, 2005

  * FIXED: Namespace computation (broken in 5.5.30 version).

  * ADDED: rdf_transaction/2 and rdf_monitor/1.

  * MODIFIED: rdf_source/1 also returns sources added using rdf_assert/4,
    i.e. setof(DB, rdf(_,_,_,DB), DBs), member(DB, DBs).

  * FIXED: rdf_update/[4,5]: unlock after type-error in action.


=============
Version 2.2.1