@@ -1,3 +1,8 @@
+Feb 27, 2006
+
+  * Fixed: crash in rdf_update/4 modifying a literal under a transaction.
+    Michiel Hildebrand.
+
 Feb 22, 2006
 
   * Fixed ordering issue on wide-character atoms.
